# haskell_nyumon

./: README.md
chapter02/: CHANGELOG.md  chapter02.cabal
chapter02/samples/: package.yaml  samples.cabal
chapter02/samples/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs
chapter02/src/: Chapter02.hs
chapter03/: CHANGELOG.md  chapter03.cabal
chapter03/samples/: package.yaml  samples.cabal
chapter03/samples/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs
chapter03/src/: Chapter03.hs
chapter04/: CHANGELOG.md  chapter04.cabal
chapter04/samples/: package.yaml  samples.cabal
chapter04/samples/app/: Main.hs  Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs  Main09.hs
chapter04/src/: Chapter04.hs
chapter05/: CHANGELOG.md  chapter05.cabal
chapter05/samples/: package.yaml  samples.cabal
chapter05/samples/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs  Main09.hs  Main10.hs  Main11.hs  Main12.hs  Main13.hs  Main14.hs
chapter05/src/: Chapter05.hs
chapter06/: CHANGELOG.md  chapter06.cabal
chapter06/src/: Chapter06.hs
chapter07/: CHANGELOG.md  chapter07.cabal
chapter07/samples/: package.yaml  samples.cabal
chapter07/samples/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs  Main09.hs  Main10.hs  Main11.hs  Main12.hs  Main13.hs
chapter07/src/: Chapter07.hs  Chapter0701.hs  Chapter0702.hs  Chapter0703.hs  Chapter0704.hs  Chapter0705.hs  Chapter0706.hs  Chapter0707.hs  Chapter0708.hs  Chapter0709.hs  Chapter0710.hs
chapter08/: CHANGELOG.md  chapter08.cabal
chapter08/samples/: ChangeLog.md  package.yaml  samples.cabal
chapter08/samples/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs
chapter09/hjq/: hjq.cabal  package.yaml
chapter09/hjq/app/: Main.hs
chapter09/hjq/src/Data/: Hjq.hs
chapter09/hjq/src/Data/Hjq/: Parser.hs  Query.hs
chapter09/hjq/test/: Spec.hs
