cabal-version:      2.4
name:               chapter07
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             akthrms
maintainer:         akt.hrms@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  -- cabal-fmt: expand src
  exposed-modules:  MyLib

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , attoparsec
    , base        ^>=4.14.1.0
    , bytestring
    , split
    , text
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable chapter07
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base       ^>=4.14.1.0
    , chapter07

  hs-source-dirs:   app
  default-language: Haskell2010
